# MNO-Client

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES  dronline-client.pro  index.html  mkdocs.yml  search.html
.github/workflows/: build.yml
Backgrounds/Background JSON/: index.html
Characters/Character Metadata/: index.html
Characters/Outfit Metadata/: index.html
Client Usage/Dialogue Cues/: index.html
Custom Character/1. Character Structure/: index.html
Custom Character/2. Character Metadata/: index.html
Custom Character/3. Outfit Metadata/: index.html
Themes/Lua/events/: index.html
Themes/Lua/functions/: index.html
Themes/Lua/signals/: index.html
docs/: index.md
docs/Backgrounds/: Background JSON.md
docs/Characters/: Character Metadata.md  Outfit Metadata.md
docs/Client Usage/: Dialogue Cues.md
docs/Custom Character/: 1. Character Structure.md  2. Character Metadata.md  3. Outfit Metadata.md
docs/Themes/Lua/: events.md  functions.md  signals.md
res/ui/: config_panel.ui
search/: search_index.json
src/: aoapplication.cpp  aoapplication.h  aoblipplayer.cpp  aobutton.cpp  aocharbutton.cpp  aoconfig.cpp  aoconfig.h  aoconfigpanel.cpp  aoconfigpanel.h  aoemotebutton.cpp  aoemotebutton.h  aoguiloader.cpp  aoimagedisplay.cpp  aoimagedisplay.h  aomusicplayer.cpp  aomusicplayer.h  aonotearea.cpp  aonotepicker.cpp  aoobject.cpp  aoobject.h  aopixmap.cpp  aopixmap.h  aosfxplayer.cpp  aosfxplayer.h  aoshoutplayer.cpp  aoshoutplayer.h  aosystemplayer.cpp  aotimer.h  audio_functions.cpp  charselect.cpp  commondefs.cpp  commondefs.h  courtroom.cpp  courtroom.h  courtroom_character.cpp  courtroom_sfx.cpp  courtroom_widgets.cpp  datatypes.cpp  datatypes.h  debug_functions.cpp  (+55 more)
src/config_tabs/: config_tab_blips.cpp  config_tab_blips.h  config_tab_blips.ui  config_tab_callwords.cpp  config_tab_callwords.h  config_tab_callwords.ui  config_tab_discord.cpp  config_tab_discord.h  config_tab_discord.ui  config_tab_mounting.cpp  config_tab_mounting.h  config_tab_mounting.ui  config_tab_theme.cpp  config_tab_theme.h  config_tab_theme.ui
src/dialogs/: RenameContentDialog.cpp  RenameContentDialog.h
src/dialogue/: CueParser.cpp  CueParser.h  DialogueCues.h
src/dro/animation/: keyframe_channel.cpp  keyframe_channel.h  keyframe_sequence.cpp  keyframe_sequence.h
src/dro/encoding/: binary_encoding.cpp  binary_encoding.h
src/dro/fs/: dir_utils.cpp  dir_utils.h  file_utils.cpp  file_utils.h  fs_characters.cpp  fs_characters.h  fs_mounting.cpp  fs_mounting.h  fs_reading.cpp  fs_reading.h  fs_writing.cpp
src/dro/interface/: courtroom_layout.cpp  courtroom_layout.h  lobby_layout.cpp  lobby_layout.h
src/dro/network/: area_metadata.h  json_packet.cpp  json_packet.h  server_metadata.cpp  tracklist_metadata.cpp
src/dro/param/: actor_repository.cpp  actor_repository.h  animation_reader.cpp  animation_reader.h  json_reader.cpp  json_reader.h  localization_reader.cpp  replay_reader.cpp  replay_reader.h  theme_mode_reader.cpp  theme_mode_reader.h  theme_module_reader.cpp  theme_module_reader.h  theme_reader.cpp  theme_reader.h
src/dro/system/: animation.cpp  animation.h  audio.cpp  audio.h  effects.cpp  effects.h  localization.cpp  localization.h  replay_playback.cpp  replay_playback.h  rp_audio.cpp  rp_audio.h  runtime_loop.cpp  runtime_loop.h  runtime_values.cpp  runtime_values.h  text_encoding.cpp  text_encoding.h  theme.cpp  theme.h  theme_scripting.cpp  theme_scripting.h
src/dro/themes/: theme_scene.h
src/dro/tools/: button_maker.cpp  button_maker.h
src/engine/animation/: keyframe_channel.cpp  keyframe_channel.h  keyframe_sequence.cpp  keyframe_sequence.h  widget_animator.cpp  widget_animator.h
src/engine/discord/: workshop_discord.cpp  workshop_discord.h
src/engine/encoding/: binary_encoding.cpp  binary_encoding.h
src/engine/fs/: fs_characters.cpp  fs_characters.h  fs_mounting.cpp  fs_mounting.h  fs_reading.cpp  fs_reading.h  fs_writing.cpp  fs_writing.h
src/engine/interface/: courtroom_layout.cpp  courtroom_layout.h  lobby_layout.cpp  lobby_layout.h
src/engine/network/: api_manager.cpp  api_manager.h  json_packet.cpp  json_packet.h
src/engine/param/: actor_repository.cpp  actor_repository.h  animation_reader.cpp  animation_reader.h  json_reader.cpp  json_reader.h  localization_reader.cpp  replay_reader.cpp  replay_reader.h  theme_mode_reader.cpp  theme_mode_reader.h  theme_module_reader.cpp  theme_module_reader.h  theme_reader.cpp  theme_reader.h
src/engine/system/: animation.cpp  animation.h  audio.cpp  audio.h  client_worker.cpp  client_worker.h  config_manager.cpp  config_manager.h  effects.cpp  effects.h  localization.cpp  localization.h  replay_playback.cpp  replay_playback.h  runtime_loop.cpp  runtime_loop.h  runtime_values.cpp  runtime_values.h  text_encoding.cpp  text_encoding.h  theme.cpp  theme.h  theme_scripting.cpp  theme_scripting.h  user_database.cpp  user_database.h
src/engine/themes/: theme_scene.cpp  theme_scene.h
src/engine/tools/: button_maker.cpp  button_maker.h
src/engine/workshop/: workshop_cache.cpp  workshop_cache.h
src/mk2/: drplayer.cpp  drplayer.h  graphicsspriteitem.cpp  graphicsspriteitem.h  graphicsvideoscreen.cpp  graphicsvideoscreen.h  spriteplayer.cpp  spriteplayer.h  spritereader.cpp  spritereader.h  spriteviewer.cpp  spriteviewer.h
src/modules/background/: background_data.h  background_reader.cpp  background_reader.h  legacy_background_reader.h
src/modules/files/: image_loader.cpp
src/modules/globals/: dro_math.cpp  dro_math.h
src/modules/json/: json_reader.cpp  json_reader.h  localization_reader.cpp  theme_mode_reader.cpp  theme_module_reader.cpp
src/modules/managers/: audio_manager.cpp  audio_manager.h  character_manager.cpp  character_manager.h  configuration_manager.cpp  configuration_manager.h  emotion_manager.cpp  game_manager.cpp  game_manager.h  localization_manager.cpp  localization_manager.h  notify_manager.cpp  notify_manager.h  (+5 more)
src/networking/: SyncedVariable.cpp  SyncedVariable.h
src/utils/: file_hash_util.cpp  file_hash_util.h
(+251 files in other folders)
